// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Communicator tests default renderer 1`] = `
<div
  className="CommunicatorToolbar"
>
  <a
    className="Communicator__title"
    onClick={[Function]}
  >
    some-communicator-title
  </a>
  <div
    className="CommunicatorToolbar__group CommunicatorToolbar__group--start"
  >
    <IconButton
      disabled={false}
      label="cboard.components.Board.CommunicatorToolbar.communicators"
      onClick={[Function]}
    >
      <pure(LayersIcon) />
    </IconButton>
  </div>
  <div
    className="CommunicatorToolbar__group CommunicatorToolbar__group--end"
  >
    <WithStyles(Button)
      disabled={false}
      id="boards-button"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Boards"
        id="cboard.components.Board.CommunicatorToolbar.boards"
        values={Object {}}
      />
    </WithStyles(Button)>
    <WithStyles(Menu)
      anchorEl={null}
      className="CommunicatorToolbar__menu"
      id="boards-menu"
      onClose={[Function]}
      open={false}
    >
      <WithStyles(MenuItem)
        onClick={[Function]}
      >
        board-1-name-key
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        onClick={[Function]}
      >
        board-2-name
      </WithStyles(MenuItem)>
    </WithStyles(Menu)>
    <CommunicatorShare
      copyLinkAction={[Function]}
      disabled={false}
      label="cboard.components.Board.CommunicatorToolbar.share"
      onShareClick={[Function]}
      onShareClose={[Function]}
      open={false}
      url="http://localhost/"
    />
  </div>
  <WithTheme(WithWidth(WithMobileDialog))
    onClose={[Function]}
    onSubmit={[Function]}
    open={false}
    title={
      <FormattedMessage
        defaultMessage="Edit Communicator Title"
        id="cboard.components.CommunicatorToolbar.editTitle"
        values={Object {}}
      />
    }
  >
    <TextField
      autoFocus={true}
      fullWidth={true}
      label={
        <FormattedMessage
          defaultMessage="Communicator Title"
          id="cboard.components.CommunicatorToolbar.communicatorTitle"
          values={Object {}}
        />
      }
      margin="dense"
      onChange={[Function]}
      required={true}
      select={false}
      type="text"
      value="some-communicator-title"
    />
  </WithTheme(WithWidth(WithMobileDialog))>
</div>
`;

exports[`Communicator tests menu behavior 1`] = `
<div
  className="CommunicatorToolbar"
>
  <a
    className="Communicator__title"
    onClick={[Function]}
  >
    some-communicator-title
  </a>
  <div
    className="CommunicatorToolbar__group CommunicatorToolbar__group--start"
  >
    <IconButton
      disabled={false}
      label="cboard.components.Board.CommunicatorToolbar.communicators"
      onClick={[Function]}
    >
      <pure(LayersIcon) />
    </IconButton>
  </div>
  <div
    className="CommunicatorToolbar__group CommunicatorToolbar__group--end"
  >
    <WithStyles(Button)
      disabled={false}
      id="boards-button"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Boards"
        id="cboard.components.Board.CommunicatorToolbar.boards"
        values={Object {}}
      />
    </WithStyles(Button)>
    <WithStyles(Menu)
      anchorEl={null}
      className="CommunicatorToolbar__menu"
      id="boards-menu"
      onClose={[Function]}
      open={false}
    >
      <WithStyles(MenuItem)
        key="board-1"
        onClick={[Function]}
      >
        board-1-name-key
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="board-2"
        onClick={[Function]}
      >
        board-2-name
      </WithStyles(MenuItem)>
    </WithStyles(Menu)>
    <CommunicatorShare
      copyLinkAction={[Function]}
      disabled={false}
      label="cboard.components.Board.CommunicatorToolbar.share"
      onShareClick={[Function]}
      onShareClose={[Function]}
      open={false}
      url="http://localhost/"
    />
  </div>
  <WithTheme(WithWidth(WithMobileDialog))
    onClose={[Function]}
    onSubmit={[Function]}
    open={false}
    title={
      <FormattedMessage
        defaultMessage="Edit Communicator Title"
        id="cboard.components.CommunicatorToolbar.editTitle"
        values={Object {}}
      />
    }
  >
    <TextField
      autoFocus={true}
      fullWidth={true}
      label={
        <FormattedMessage
          defaultMessage="Communicator Title"
          id="cboard.components.CommunicatorToolbar.communicatorTitle"
          values={Object {}}
        />
      }
      margin="dense"
      onChange={[Function]}
      required={true}
      select={false}
      type="text"
      value="some-communicator-title"
    />
  </WithTheme(WithWidth(WithMobileDialog))>
</div>
`;

exports[`Communicator tests menu behavior 2`] = `
<div
  className="CommunicatorToolbar"
>
  <a
    className="Communicator__title"
    onClick={[Function]}
  >
    some-communicator-title
  </a>
  <div
    className="CommunicatorToolbar__group CommunicatorToolbar__group--start"
  >
    <IconButton
      disabled={false}
      label="cboard.components.Board.CommunicatorToolbar.communicators"
      onClick={[Function]}
    >
      <pure(LayersIcon) />
    </IconButton>
  </div>
  <div
    className="CommunicatorToolbar__group CommunicatorToolbar__group--end"
  >
    <WithStyles(Button)
      disabled={false}
      id="boards-button"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Boards"
        id="cboard.components.Board.CommunicatorToolbar.boards"
        values={Object {}}
      />
    </WithStyles(Button)>
    <WithStyles(Menu)
      anchorEl="someElement"
      className="CommunicatorToolbar__menu"
      id="boards-menu"
      onClose={[Function]}
      open={true}
    >
      <WithStyles(MenuItem)
        key="board-1"
        onClick={[Function]}
      >
        board-1-name-key
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="board-2"
        onClick={[Function]}
      >
        board-2-name
      </WithStyles(MenuItem)>
    </WithStyles(Menu)>
    <CommunicatorShare
      copyLinkAction={[Function]}
      disabled={false}
      label="cboard.components.Board.CommunicatorToolbar.share"
      onShareClick={[Function]}
      onShareClose={[Function]}
      open={false}
      url="http://localhost/"
    />
  </div>
  <WithTheme(WithWidth(WithMobileDialog))
    onClose={[Function]}
    onSubmit={[Function]}
    open={false}
    title={
      <FormattedMessage
        defaultMessage="Edit Communicator Title"
        id="cboard.components.CommunicatorToolbar.editTitle"
        values={Object {}}
      />
    }
  >
    <TextField
      autoFocus={true}
      fullWidth={true}
      label={
        <FormattedMessage
          defaultMessage="Communicator Title"
          id="cboard.components.CommunicatorToolbar.communicatorTitle"
          values={Object {}}
        />
      }
      margin="dense"
      onChange={[Function]}
      required={true}
      select={false}
      type="text"
      value="some-communicator-title"
    />
  </WithTheme(WithWidth(WithMobileDialog))>
</div>
`;

exports[`Communicator tests switching boards behavior 1`] = `
<div
  className="CommunicatorToolbar"
>
  <a
    className="Communicator__title"
    onClick={[Function]}
  >
    some-communicator-title
  </a>
  <div
    className="CommunicatorToolbar__group CommunicatorToolbar__group--start"
  >
    <IconButton
      disabled={false}
      label="cboard.components.Board.CommunicatorToolbar.communicators"
      onClick={[Function]}
    >
      <pure(LayersIcon) />
    </IconButton>
  </div>
  <div
    className="CommunicatorToolbar__group CommunicatorToolbar__group--end"
  >
    <WithStyles(Button)
      disabled={false}
      id="boards-button"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Boards"
        id="cboard.components.Board.CommunicatorToolbar.boards"
        values={Object {}}
      />
    </WithStyles(Button)>
    <WithStyles(Menu)
      anchorEl={null}
      className="CommunicatorToolbar__menu"
      id="boards-menu"
      onClose={[Function]}
      open={false}
    >
      <WithStyles(MenuItem)
        key="board-1"
        onClick={[Function]}
      >
        board-1-name-key
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="board-2"
        onClick={[Function]}
      >
        board-2-name
      </WithStyles(MenuItem)>
    </WithStyles(Menu)>
    <CommunicatorShare
      copyLinkAction={[Function]}
      disabled={false}
      label="cboard.components.Board.CommunicatorToolbar.share"
      onShareClick={[Function]}
      onShareClose={[Function]}
      open={false}
      url="http://localhost/"
    />
  </div>
  <WithTheme(WithWidth(WithMobileDialog))
    onClose={[Function]}
    onSubmit={[Function]}
    open={false}
    title={
      <FormattedMessage
        defaultMessage="Edit Communicator Title"
        id="cboard.components.CommunicatorToolbar.editTitle"
        values={Object {}}
      />
    }
  >
    <TextField
      autoFocus={true}
      fullWidth={true}
      label={
        <FormattedMessage
          defaultMessage="Communicator Title"
          id="cboard.components.CommunicatorToolbar.communicatorTitle"
          values={Object {}}
        />
      }
      margin="dense"
      onChange={[Function]}
      required={true}
      select={false}
      type="text"
      value="some-communicator-title"
    />
  </WithTheme(WithWidth(WithMobileDialog))>
</div>
`;

exports[`Communicator tests switching boards behavior 2`] = `
<div
  className="CommunicatorToolbar"
>
  <a
    className="Communicator__title"
    onClick={[Function]}
  >
    some-communicator-title
  </a>
  <div
    className="CommunicatorToolbar__group CommunicatorToolbar__group--start"
  >
    <IconButton
      disabled={false}
      label="cboard.components.Board.CommunicatorToolbar.communicators"
      onClick={[Function]}
    >
      <pure(LayersIcon) />
    </IconButton>
  </div>
  <div
    className="CommunicatorToolbar__group CommunicatorToolbar__group--end"
  >
    <WithStyles(Button)
      disabled={false}
      id="boards-button"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Boards"
        id="cboard.components.Board.CommunicatorToolbar.boards"
        values={Object {}}
      />
    </WithStyles(Button)>
    <WithStyles(Menu)
      anchorEl="someElement"
      className="CommunicatorToolbar__menu"
      id="boards-menu"
      onClose={[Function]}
      open={true}
    >
      <WithStyles(MenuItem)
        key="board-1"
        onClick={[Function]}
      >
        board-1-name-key
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="board-2"
        onClick={[Function]}
      >
        board-2-name
      </WithStyles(MenuItem)>
    </WithStyles(Menu)>
    <CommunicatorShare
      copyLinkAction={[Function]}
      disabled={false}
      label="cboard.components.Board.CommunicatorToolbar.share"
      onShareClick={[Function]}
      onShareClose={[Function]}
      open={false}
      url="http://localhost/"
    />
  </div>
  <WithTheme(WithWidth(WithMobileDialog))
    onClose={[Function]}
    onSubmit={[Function]}
    open={false}
    title={
      <FormattedMessage
        defaultMessage="Edit Communicator Title"
        id="cboard.components.CommunicatorToolbar.editTitle"
        values={Object {}}
      />
    }
  >
    <TextField
      autoFocus={true}
      fullWidth={true}
      label={
        <FormattedMessage
          defaultMessage="Communicator Title"
          id="cboard.components.CommunicatorToolbar.communicatorTitle"
          values={Object {}}
        />
      }
      margin="dense"
      onChange={[Function]}
      required={true}
      select={false}
      type="text"
      value="some-communicator-title"
    />
  </WithTheme(WithWidth(WithMobileDialog))>
</div>
`;
